--- a/index.html
+++ b/index.html
@@ -215,6 +215,13 @@
             gap: 10px;
         }
 
+        #skills li img {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
         #skills li:hover {
             transform: translateY(-5px);
             background: #1E90FF;
@@ -434,12 +441,12 @@
     <section id="skills">
         <h2>Skills</h2>
         <ul>
-            <li><img src="https://via.placeholder.com/24" alt="Machine Learning"> Machine Learning</li>
-            <li><img src="https://via.placeholder.com/24" alt="Data Analysis"> Data Analysis</li>
-            <li><img src="https://via.placeholder.com/24" alt="Blockchain"> Blockchain</li>
-            <li><img src="https://via.placeholder.com/24" alt="Python"> Python</li>
-            <li><img src="https://via.placeholder.com/24" alt="Generative AI"> Generative AI</li>
-            <li><img src="https://via.placeholder.com/24" alt="Web Development"> Web Development</li>
+            <li><img src="https://img.freepik.com/free-vector/ai-brain-concept-illustration_114360-19015.jpg?t=st=1735495713~exp=1735499313~hmac=8a908e83750f66975a538171ba1e6f4a7aae5cbc8119470bf95d461360d2f8be&w=740" alt="Machine Learning"> Machine Learning</li>
+            <li><img src="https://img.freepik.com/free-vector/data-analyst-oversees-governs-income-expenses-with-magnifier-financial-management-system-finance-software-it-management-tool-concept_335657-1891.jpg?t=st=1735495931~exp=1735499531~hmac=0558b81b97fe3e99a86cb73b2b8ecb6ec1494608696e8175f0863d586846d0c7&w=996" alt="Data Analysis"> Data Analysis</li>
+            <li><img src="https://img.freepik.com/free-vector/gradient-cryptocurrency-concept-with-coins_52683-78873.jpg?t=st=1735496007~exp=1735499607~hmac=32bcf7d2bcb81f8d50369b1b6aeddecd4d0da8812037da2ede63203c586cfe2d&w=740" alt="Blockchain"> Blockchain</li>
+            <li><img src="https://img.freepik.com/free-vector/programmer-working-flat-style_52683-15041.jpg?t=st=1735496172~exp=1735499772~hmac=889c3398d8faf5406a66949c3899a56ec07c63ac87ac430f1b93816ce6dc8165&w=740" alt="Python"> Python</li>
+            <li><img src="https://img.freepik.com/free-photo/ai-technology-microchip-background-futuristic-innovation-technology-remix_53876-124727.jpg?t=st=1735496282~exp=1735499882~hmac=c6b7c72cb1ee871639aec5ebcbc02d4d54a50a3df1e5e3ccaa2adf8ad51d4a42&w=996" alt="Generative AI"> Generative AI</li>
+            <li><img src="https://img.freepik.com/free-photo/person-front-computer-working-html_23-2150040428.jpg?t=st=1735496360~exp=1735499960~hmac=12eda084173c820c9b748a1435c688d1e92e6608512ea574e1badb4d95a59891&w=996" alt="Web Development"> Web Development</li>
         </ul>
     </section>
 
@@ -447,28 +454,17 @@
         <h2>Projects</h2>
         <div class="projects-grid">
             <div class="project-item">
-                <img src="https://via.placeholder.com/300x200" alt="Django Application">
-                <h3>Django Application</h3>
-                <p>Developed a scalable web application using Django and SQL databases.</p>
-            </div>
-            <div class="project-item">
-                <img src="https://via.placeholder.com/300x200" alt="Hyperledger Blockchain">
-                <h3>Hyperledger Blockchain</h3>
-                <p>Created a private blockchain network with Hyperledger Besu.</p>
-            </div>
-            <div class="project-item">
-                <img src="https://via.placeholder.com/300x200" alt="Generative AI">
+                <img src="https://img.freepik.com/free-photo/opened-ai-chat-laptop_1268-21506.jpg?t=st=1735496572~exp=1735500172~hmac=9ebfe04f53024eed34231e4722cc8c52ab3d25dc6dcd82f4d138e4af9a68f96b&w=996" alt="Generative AI">
                 <h3>Generative AI</h3>
                 <p>Worked on language models to build interactive chatbots.</p>
             </div>
             <div class="project-item">
-                <img src="https://via.placeholder.com/300x200" alt="AI-Powered Image Description & Speech Conversion App">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFbqbHFbfELXPGJp2kEI8-ImLRM1qk-9fjYg&s" alt="AI-Powered Image Description & Speech Conversion App">
                 <h3>AI-Powered Image Description & Speech Conversion App</h3>
-                
-                <p>An AI-powered web app that provides image descriptions and converts extracted text to speech for visually impaired users..</p>
+                <p>An AI-powered web app that provides image descriptions and converts extracted text to speech for visually impaired users.</p>
             </div>
             <div class="project-item">
-                <img src="https://via.placeholder.com/300x200" alt="AI-Powered Code Review Assistant">
+                <img src="https://img.freepik.com/free-photo/html-css-collage-concept-with-person_23-2150062002.jpg?t=st=1735497087~exp=1735500687~hmac=b3f90d3cd5165024197a241aed3f66d2fd53a6f8d9fee8daa6e4dfaa45520484&w=996" alt="AI-Powered Code Review Assistant">
                 <h3>AI-Powered Code Review Assistant</h3>
                 <p>An AI-powered code review assistant that analyzes code for bugs, optimizations, and improvements in multiple programming languages.</p>
             </div>
@@ -488,19 +484,8 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 Kamalakar Majji | <a href="mailto:kamalakar@example.com">kamalakar@example.com</a></p>
-        <p>Connect with me on <a href="https://www.linkedin.com/in/kamalakarmajji" target="_blank">LinkedIn</a> and <a href="https://github.com/kamalakarmajji" target="_blank">GitHub</a>.</p>
+        <p>&copy; 2024 Kamalakar Majji | <a href="mailto:kamalakarmajji5683@gmail.com">kamalakarmajji5683@gmail.com</a></p>
+        <p>Connect with me on <a href="https://www.linkedin.com/in/kamalakarmajji5683" target="_blank">LinkedIn</a> and <a href="https://github.com/kamalakar5683" target="_blank">GitHub</a>.</p>
     </footer>
-
-    <script>
-        window.addEventListener('scroll', function() {
-            const nav = document.querySelector('nav');
-            if (window.scrollY > 50) {
-                nav.classList.add('scrolled');
-            } else {
-                nav.classList.remove('scrolled');
-            }
-        });
-    </script>
 </body>
 </html>
