--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
     <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Kamalakar Majji | <a href="mailto:kamalakarmajji5683@gmail.com">kamalakarmajji5683@gmail.com</a></p>
-        <p>Connect with me on <a href="https://www.linkedin.com/in/kamalakarmajji5683" target="_blank">LinkedIn</a> and <a href="https://github.com/kamalakar5683" target="_blank">GitHub</a>.</p>
+        <p>Connect with me on <a href="https://www.linkedin.com/in/majji-kamalakar/" target="_blank">LinkedIn</a> and <a href="https://github.com/kamalakar5683" target="_blank">GitHub</a>.</p>
     </footer>
 </body>
 </html>
